--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "three.js"
   ],
   "dependencies": {
+    "yaml" : "0.2.x",
     "base64" : "2.0.7",
     "config": "0.4.x",
     "socket.io": "0.9.x",
